--- a/RMISWeb/App_GlobalResources/Resource.resx
+++ b/RMISWeb/App_GlobalResources/Resource.resx
@@ -294,4 +294,10 @@
   <data name="Remarks" xml:space="preserve">
     <value>Remarks</value>
   </data>
+  <data name="IsRiceBrandDeleted" xml:space="preserve">
+    <value>Is Deleted</value>
+  </data>
+  <data name="RiceBrandType" xml:space="preserve">
+    <value>Rice Brand Type</value>
+  </data>
 </root>
