--- a/RMISWeb/App_GlobalResources/Resource.resx
+++ b/RMISWeb/App_GlobalResources/Resource.resx
@@ -303,4 +303,16 @@
   <data name="BuyerName" xml:space="preserve">
     <value>Buyer Name</value>
   </data>
+  <data name="DesigType" xml:space="preserve">
+    <value>Designation Type</value>
+  </data>
+  <data name="IsDesigDeleted" xml:space="preserve">
+    <value>IsDeleted</value>
+  </data>
+  <data name="IsSalaryTypeDeleted" xml:space="preserve">
+    <value>IsDeleted</value>
+  </data>
+  <data name="SalaryType" xml:space="preserve">
+    <value>Salary Type</value>
+  </data>
 </root>
