--- a/RMISWeb/App_GlobalResources/Resource.resx
+++ b/RMISWeb/App_GlobalResources/Resource.resx
@@ -387,4 +387,7 @@
   <data name="MediatorName" xml:space="preserve">
     <value>Mediator Name</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Mediator Name</value>
+  </data>
 </root>
